@@ -1,0 +1,2 @@
+<!-- test nested templates -->
+{{reprint|content={{SERVERNAME}}}}
